# ASC-ODE-team04

./: .gitignore  CMakeLists.txt  README.md  autodiff.json  config.json  crank-nicolson.json  de  euler-methods.json  exercise-18-4.json  exercise-18-5.json  exercise-19-4.json  exercise17-2-2.json  exercise17-4-1.json  index.html  index.json  myst.search.json  myst.xref.json  newmark.json  objects.inv  runge-kutta.json
Exercises/: CMakeLists.txt  Exercise_17_4_1_RCCircuit.cpp  PendulumAD_18_5.cpp
NSSC_Part3_1/: NSSC_Part3_1.sln  Newton.hpp  nonlinfunc.hpp  timestepper.hpp
NSSC_Part3_1/NSSC_Part3_1/: NSSC_Part3_1.vcxproj  NSSC_Part3_1.vcxproj.filters  autodiff.hpp
NSSC_Part3_1/NSSC_Part3_1/x64/Release/NSSC_Part3_1.tlog/: NSSC_Part3_1.lastbuildstate
Runge_Kutta/: Exercise_19_4_2.cpp
autodiff/: index.html
crank-nicolson/: index.html
demos/: CMakeLists.txt  Exercise_17_2_2.cpp  Exercise_17_4_1.cpp  Exercise_17_4_1_mass_spring.cpp
docs/: Exercise 17_2_2.md  Exercise17_2_2.md  Exercise17_4_1.md  Exercise_18_4.md  Exercise_18_5.md  Exercise_19_4.md  Newmark.md  intro.md  myst.yml
euler-methods/: index.html
exercise-18-4/: index.html
exercise-18-5/: index.html
exercise-19-4/: index.html
exercise17-2-2/: index.html
exercise17-4-1/: index.html
legendre_autodiff/: CMakeLists.txt  autodiff.hpp  main.cpp  plot_legendre.py
mechsystem/: CMakeLists.txt  Crane.ipynb  Spinning_Top.ipynb  bind_mass_spring.cpp  chain.ipynb  mass_spring.cpp  mass_spring.hpp  mass_spring.ipynb  test_mass_spring.py
newmark/: index.html
runge-kutta/: index.html
src/: autodiff.hpp  nonlinfunc.hpp  timestepper.hpp
